# ray-elasticsearch

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: env.yml  read_schema.py
ray_elasticsearch/: __init__.py  _compat.py  _schema.py  _sink.py  _source.py  datasink.py  datasource.py  elasticsearch_compat.py  model.py  test_schema.py
