[project]
name = "ray-elasticsearch"
authors = [
    { name = "Jan Heinrich Merker", email = "heinrich.merker@uni-jena.de" },
]
description = "Ray data source and sink for Elasticsearch."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pyarrow~=20.0",
    "ray[data]~=2.49",
    "typing-extensions~=4.15",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "elasticsearch6~=6.4",
    "elasticsearch6-dsl~=6.4",
    "elasticsearch7~=7.3",
    "elasticsearch7-dsl~=7.3",
    "elasticsearch8~=8.12,<8.18.0",
    "elasticsearch8-dsl~=8.12,<8.18.0",
    "elasticsearch~=8.12,<8.18.0",
    "elasticsearch-dsl~=8.12,<8.18.0",
    "elasticsearch-pydantic~=0.1.1",
    "mypy~=1.6",
    "pandas-stubs~=2.0",
    "pyarrow-stubs~=20.0",
    "pytest~=8.0",
    "pytest-cov>=5,<7",
    "pyarrow-stubs>=10,<21",
    "ruff>=0.5,<0.12",
]
examples = [
    "elasticsearch~=8.12",
    "elasticsearch-dsl~=8.12",
    "ray[default]~=2.49",
]

[project.urls]
"Homepage" = "https://github.com/janheinrichmerker/ray-elasticsearch"
"Bug Tracker" = "https://github.com/janheinrichmerker/ray-elasticsearch/issues"

[build-system]
requires = ["setuptools>=50", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["build", "venv", "examples"]

[tool.setuptools_scm]

[tool.ruff]
exclude = ["build", "venv"]

[tool.mypy]
exclude = ["build", "venv"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["build", "venv"]

[tool.bandit.assert_used]
skips = ["**/test_*.py"]

[tool.pytest.ini_options]
log_cli = true
